# numen

./: CMakeLists.txt  README.md
demos/: factorial.c
utils/: utils.c  utils.h
